packages/astro/e2e/fixtures/errors/src/components/react/ReactSyntaxError.jsx
import React from 'react';

export default function ReactSyntaxError() {
  return (<div></div></div>);
}
